--- a/lide/index.html
+++ b/lide/index.html
@@ -1,6 +1,6 @@
 ---
 layout: members
-title: O nás
+title: Naši lidé
 
 viewMode: grouped # or alltogether
 groups:
@@ -13,7 +13,3 @@ groups:
     category: priznivci
 ---
 
-<blockquote class="c-blockquote c-blockquote--wicon">
-  <p>Po úspěšných volbách do poslanecké sněmovny pociťují Piráti velký zájem ze strany veřejnosti. Rádi bychom tuto přízeň společnosti vrátili a v nadcházejících podzimních volbách vpluli do zastupitelstev měst a obvodů.</p>
-  <cite>Nějaký pirát</cite>
-</blockquote>
