lukaš je zvoleny

--- a/lide/index.html
+++ b/lide/index.html
@@ -7,6 +7,8 @@ groups:
   - name: Místní předsednictvo
     category: pms
     sort: ordpms
+  - name: Senátoři a poslanci
+    category: ustavni-cinitele
   - name: Členové
     category: clenove
 ---
