--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ rbar:
     <section class="o-section o-section--spaceBot">
       <div class="o-section-inner o-section-inner--leftBlock">
         <header class="o-section-header">
-          <h1 class="o-section__heading">Aktuální témata</h1>
+          <h1 class="o-section__heading">Na Osmičce se děje:</h1>
         </header>
         {% for article in site.posts limit: 6 %}
           {% include articles/horizontal-article.html article=article %}
