--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ layout: default
 rbar: 
   - fb
   - calendar
+img: banner-default.jpg
 ---
 <div class="row">
   <div class="medium-12 large-8 columns">
