--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@ rbar:
   - calendar
 img: banner-default.jpg
 ---
+{% include homepage/banner.html 
+   link='/program/'
+   title='Program pro komunální volby 2018'
+   default='banner-default.jpg'
+   mobile='banner-default.jpg'
+   breakpoint=640
+%}
+
 <div class="row">
   <div class="medium-12 large-8 columns">
     <section class="o-section o-section--spaceBot">
