--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@ img: banner-default.jpg
 {% include homepage/banner.html 
    link='/program/'
    title='Program pro komunální volby 2018'
-   default='banner-default.jpg'
-   mobile='banner-default.jpg'
+   default='banner-default_opozice.jpg'
+   mobile='banner-default_opozice.jpg'
    breakpoint=640
 %}
 
