Program s napojením na Redmine
Signed-off-by: Jan Hamal Dvořák <mordae@anilinux.org>

--- a/komunalni-volby/index.html
+++ b/komunalni-volby/index.html
@@ -6,3 +6,6 @@ layout: default
     {% include_relative program.html %}
   </div>
 </div>
+<div class="row" style="text-align: center">
+  <p>Dále čtěte: <a href="/program/">původní volební program</a></p>
+</div>
