--- a/komunalni-volby/program.html
+++ b/komunalni-volby/program.html
@@ -4,6 +4,7 @@
 			<div class="o-section-inner o-section-inner--leftBlock">
         <header class="o-section-header">
           <h1 class="o-section__heading">Program pro volební období 2018 - 2022</h1>
+          <h2>Povolební konstelace nám přisoudila opoziční roli, proto jsme se rozhodli se aktivně věnovat oblastem, které z této role můžeme ovlivnit.</h2>
         </header><br/>
         {% for item in site.data.program %}
           {% include_relative item.html item=item.item prefix="cz" %}
