Oprava odkazu v hero na novější prezentaci programu
Signed-off-by: Jan Hamal Dvořák <mordae@anilinux.org>

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ rbar:
   - calendar
 ---
 {% include homepage/banner.html 
-   link='/program/'
+   link='/komunalni-volby/'
    title='Program pro komunální volby 2018'
    default='banner-default_opozice.jpg'
    mobile='banner-default_opozice.jpg'
