--- a/lide/index.html
+++ b/lide/index.html
@@ -4,7 +4,7 @@ title: Naši lidé
 
 viewMode: grouped # or alltogether
 groups:
-  - name: Místní předsednictvo
+  - name: Předsednictvo místního sdružení
     category: pms
     sort: ordpms
   - name: Senátoři a poslanci
