--- a/lide/index.html
+++ b/lide/index.html
@@ -10,6 +10,6 @@ groups:
   - name: Senátoři a poslanci
     category: ustavni-cinitele
   - name: Členové
-    category: clenove
+    category: Ostatní členové
 ---
 
