--- a/lide/index.html
+++ b/lide/index.html
@@ -9,7 +9,7 @@ groups:
     sort: ordpms
   - name: Senátoři a poslanci
     category: ustavni-cinitele
-  - name: Členové
-    category: Ostatní členové
+  - name: Ostatní členové
+    category: clenove
 ---
 
