--- a/index.html
+++ b/index.html
@@ -1,36 +1,15 @@
 ---
 layout: default
-rbar: 
-  - fb
-  - calendar
 ---
-{% include homepage/banner.html 
-   link='/komunalni-volby/'
-   title='Program pro komunální volby 2018'
-   default='banner-default_opozice.jpg'
-   mobile='banner-default_opozice.jpg'
-   breakpoint=640
-%}
+          
+{% capture imgPath %}{% asset "posts/libensky-zamek.jpg" @path %}{% endcapture %}
+{% assign imgPath = imgPath | absolute_url %}
+  
+{% include hero/simple.html headline="Piráti Praha 8" description="Pro lepší Osmičku" bgImg=imgPath %}
 
-<div class="row">
-  <div class="medium-12 large-8 columns">
-    <section class="o-section o-section--spaceBot">
-      <div class="o-section-inner o-section-inner--leftBlock">
-        <header class="o-section-header">
-          <h1 class="o-section__heading">Na Osmičce se děje:</h1>
-        </header>
-        {% for article in site.posts limit: 6 %}
-          {% include articles/horizontal-article.html article=article %}
-        {% endfor %}
-        <div class="c-article-listing__nextbox">
-          <a href="{{'/aktuality/' | relative_url}}" rel="next" class="button expanded large">Další články</a>
-        </div>
-      </div>
-    </section>
-  </div>
-  {% if page.rbar %}
-  <div class="medium-12 large-4 columns">
-    {% include right-bar/rbar.html param='rbar' %}
-  </div>
-  {% endif %}
+<div class="container container--default pt-4 lg:pb-24">
+  {% include homepage/news.html %}
+  {% include homepage/countdown.html deadline="2022-10-05 14:00:00" %}
+  {% include homepage/calendar.html %}
+  {% include homepage/social.html %}
 </div>
