--- a/aktuality/index.html
+++ b/aktuality/index.html
@@ -1,23 +1,18 @@
 ---
 layout: default
-title: Aktuality
-description: Novinky z města XY, pirátské kauzy a vše o xy.
-keywords: aktuality, tiskové zprávy, press, blog
+title: Pirátské aktuality Prahy 8
+description: Seznam novinek, článků a kauz Prahy 8 očima Pirátů Praha 8
+keywords: aktuality, novinky tiskové zprávy, blog
 ---
 
+<div class="container container--default pt-8 lg:py-24">
+  <section>
+    <h1 class="head-alt-md md:head-alt-lg max-w-5xl mb-4">Aktuální témata</h1>
+    {% assign posts = paginator.posts %}
+    <main>
+      {% include articles/list-responsive.html posts=posts %}
+    </main>
 
-<div class="row">
-  <div class="columns">
-    <div class="o-section">
-      <div class="o-section-inner">
-          <header class="c-page-header">
-            <h1 itemprop="headline" class="c-page-title">Aktuality</h1>
-          </header>
-          {% assign posts = paginator.posts %}
-          {% include articles/list-responsive.html posts=posts %}
-          {% include articles/pagination.html paginator=paginator %}
-      </div>
-    </div>
-  </div>
+    {% include articles/pagination.html paginator=paginator %}
+  </section>
 </div>
-
