Update people to theme 8.4 + new social icons + new profile

--- a/lide/index.html
+++ b/lide/index.html
@@ -7,6 +7,9 @@ groups:
   - name: Předsednictvo místního sdružení
     category: pms
     sort: ordpms
+  - name: Zastupitelé Praha 8
+    category: zastupitele
+    sort: ordzas
   - name: Senátoři a poslanci
     category: ustavni-cinitele
   - name: Ostatní členové
