--- a/program/index.html
+++ b/program/index.html
@@ -1,11 +1,12 @@
 ---
-layout: default
+layout: program-redmine
+title: Plnění programu 2018 - 2022
+campaignCategoryUid: 2018-komunalni
+customizeHeader: true
 ---
-<div class="row" style="text-align: center">
-  <div class="medium-12 large-12 columns">
-    {% include_relative program.html %}
-  </div>
-</div>
-<div class="row" style="text-align: center">
-  <p>Dále čtěte: <a href="/program/">původní volební program</a></p>
-</div>
+<header>
+	<h1 class="head-alt-md md:head-alt-lg max-w-5xl mb-4">Plnění programu 2018 - 2022</h1>
+	<div class="content-block">
+    	<p>Povolební konstelace nám přisoudila opoziční roli. Proto není snadné prosadit všechny body <a href="/volby/2018-komunalni.html?pohled=program">původního volbeního programu</a>. Snažíme se z opozičních řad ovlivnit maximum ... a jak se nám to daří, naleznete níže.</p>
+    </div>
+</header>
