--- a/lide/index.html
+++ b/lide/index.html
@@ -7,7 +7,7 @@ groups:
   - name: Předsednictvo místního sdružení
     category: pms
     sort: ordpms
-  - name: Zastupitelé Praha 8
+  - name: Zastupitelé MČ Praha 8
     category: zastupitele
     sort: ordzas
   - name: Senátoři a poslanci
