--- a/aktuality/index.html
+++ b/aktuality/index.html
@@ -7,7 +7,7 @@ keywords: aktuality, novinky tiskové zprávy, blog
 
 <div class="container container--default pt-8 lg:py-24">
   <section>
-    <h1 class="head-alt-md md:head-alt-lg max-w-5xl mb-4">Na Osmičce se děje:</h1>
+    <h1 class="head-alt-md md:head-alt-lg max-w-5xl mb-4">Aktuality:</h1>
     {% assign posts = paginator.posts %}
     <main>
       {% include articles/list-responsive.html posts=posts %}
