--- a/program/index.html
+++ b/program/index.html
@@ -7,6 +7,6 @@ customizeHeader: true
 <header>
 	<h1 class="head-alt-md md:head-alt-lg max-w-5xl mb-4">Plnění programu 2018 - 2022</h1>
 	<div class="content-block">
-    	<p>Povolební konstelace nám přisoudila opoziční roli. Proto není snadné prosadit všechny body <a href="/volby/2018-komunalni.html?pohled=program">původního volbeního programu</a>. Snažíme se z opozičních řad ovlivnit maximum ... a jak se nám to daří, naleznete níže.</p>
+    	<p>Povolební konstelace nám přisoudila opoziční roli. Nebude tak snadné prosadit všechny body <a href="/volby/2018-komunalni.html?pohled=program">původního volebního programu</a>, ale snažíme se i z opozičních řad udělat a prosadit maximum možného.</p>
     </div>
 </header>
