Add Marketa to regP

--- a/lide/index.html
+++ b/lide/index.html
@@ -12,7 +12,9 @@ groups:
     sort: ordzas
   - name: Senátoři a poslanci
     category: ustavni-cinitele
-  - name: Ostatní členové
+  - name: Ostatní členové MS
     category: clenove
+  - name: Registrovaní příznivci
+    category: regp
 ---
 
