--- a/aktuality/index.html
+++ b/aktuality/index.html
@@ -3,16 +3,16 @@ layout: default
 title: Pirátské aktuality Prahy 8
 description: Seznam novinek, článků a kauz Prahy 8 očima Pirátů Praha 8
 keywords: aktuality, novinky tiskové zprávy, blog
+pagination:
+  enabled: true
 ---
 
 <div class="container container--default pt-8 lg:py-24">
   <section>
     <h1 class="head-alt-md md:head-alt-lg max-w-5xl mb-4">Aktuality:</h1>
-    {% assign posts = paginator.posts %}
     <main>
-      {% include articles/list-responsive.html posts=posts %}
+      {% include articles/list-responsive.html posts=paginator.posts %}
     </main>
-
     {% include articles/pagination.html paginator=paginator %}
   </section>
 </div>
