Add garant/specialista title

--- a/lide/index.html
+++ b/lide/index.html
@@ -12,9 +12,9 @@ groups:
     sort: ordzas
   - name: Senátoři a poslanci
     category: ustavni-cinitele
-  - name: Ostatní členové MS
+  - name: Členové MS Praha 8
     category: clenove
-  - name: Registrovaní příznivci
+  - name: Registrovaní příznivci MS Praha 8
     category: regp
 ---
 
