--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
 
 <div class="container container--default pt-4 lg:pb-24">
   {% include homepage/news.html title="Na Osmičce se děje:" %}
-  {% include homepage/countdown.html deadline="2022-10-05 14:00:00" %}
+  <!-- {% include homepage/countdown.html deadline="2022-10-05 14:00:00" %} -->
   {% include homepage/calendar.html %}
   {% include homepage/social.html %}
 </div>
