--- a/lide/index.html
+++ b/lide/index.html
@@ -14,7 +14,7 @@ groups:
     category: ustavni-cinitele
   - name: Členové MS Praha 8
     category: clenove
-  - name: Registrovaní příznivci MS Praha 8
+  - name: Registrovaní příznivci a podporovatelé MS Praha 8
     category: regp
 ---
 
