--- a/index.html
+++ b/index.html
@@ -2,10 +2,23 @@
 layout: default
 ---
 
-{% capture imgPath %}{% asset "posts/libensky-zamek.jpg" @path %}{% endcapture %}
-{% assign imgPath = imgPath | absolute_url %}
-
-{% include hero/simple.html headline="Piráti Praha 8" description="Makáme v opozici. Držíme směr!" bgImg=imgPath %}
+article class="hero hero--image " style="--image-url: url(posts/libensky-zamek.jpg;1920&#x2F;1080)">
+  <div class="container grid lg:grid-rows-5 lg:grid-cols-7 gap-2 items-center">
+    <div class="lg:row-span-4 lg:col-span-3 order-1">
+      <h1 class="head-alt-md md:head-alt-xl">Jsme Piráti z městské části Praha 8</h1>
+    </div>
+    <div class="lg:row-span-1 lg:col-span-3 order-3">
+      <div class="mt-4 md:mt-8 space-y-4">
+        <button class="btn btn--white btn--fullwidth md:btn--autowidth text-lg">
+          <div class="btn__body ">Call to action</div>
+        </button>
+      </div>
+    </div>
+    <div class="lg:row-span-5 lg:col-span-4 order-2">
+      <img src="posts/autovraky.jpg" />
+    </div>
+  </div>
+</article>
 
 <div class="container container--default pt-4 lg:pb-24">
   <br />
