--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-article class="hero hero--image " style="--image-url: url(posts/libensky-zamek.jpg;1920&#x2F;1080)">
+article class="hero hero--image " style="--image-url: url(posts/libensky-zamek.jpg)">
   <div class="container grid lg:grid-rows-5 lg:grid-cols-7 gap-2 items-center">
     <div class="lg:row-span-4 lg:col-span-3 order-1">
       <h1 class="head-alt-md md:head-alt-xl">Jsme Piráti z městské části Praha 8</h1>
