--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<article class="hero hero--image " style="--image-url: url(posts/libensky-zamek.jpg)">
+<article class="hero hero--image " style="--image-url: url(assets/img/posts/posts/libensky-zamek.jpg)">
   <div class="container grid lg:grid-rows-5 lg:grid-cols-7 gap-2 items-center">
     <div class="lg:row-span-4 lg:col-span-3 order-1">
       <h1 class="head-alt-md md:head-alt-xl">Jsme Piráti z městské části Praha 8</h1>
@@ -13,9 +13,6 @@ layout: default
           <div class="btn__body ">Call to action</div>
         </button>
       </div>
-    </div>
-    <div class="lg:row-span-5 lg:col-span-4 order-2">
-      <img src="posts/autovraky.jpg" />
     </div>
   </div>
 </article>
