--- a/index.html
+++ b/index.html
@@ -2,17 +2,19 @@
 layout: default
 ---
 
-<article class="hero hero--image " style="--image-url: url(assets/img/posts/libensky-zamek.jpg)">
+<article class="hero hero--image {{ classes }}" style="--image-url: /assets/img/posts/libensky-zamek.jpg)">
   <div class="container grid lg:grid-rows-5 lg:grid-cols-7 gap-2 items-center">
     <div class="lg:row-span-4 lg:col-span-3 order-1">
-      <h1 class="head-alt-md md:head-alt-xl">Jsme Piráti z městské části Praha 8</h1>
+      <h1 class="head-alt-md md:head-alt-xl">{{ claim }}{{^ claim }}{{ headline.medium }}{{/ claim }}</h1>
     </div>
     <div class="lg:row-span-1 lg:col-span-3 order-3">
       <div class="mt-4 md:mt-8 space-y-4">
-        <button class="btn btn--white btn--fullwidth md:btn--autowidth text-lg">
-          <div class="btn__body ">Call to action</div>
-        </button>
+        {{> atoms-basic-button(classes: "btn--white btn--fullwidth md:btn--autowidth text-lg") }}
+        {{> atoms-basic-button(classes: "btn--white btn--fullwidth md:btn--autowidth text-lg") }}
       </div>
+    </div>
+    <div class="lg:row-span-5 lg:col-span-4 order-2">
+      <img src="/assets/img/posts/libensky-zamek.jpg" />
     </div>
   </div>
 </article>
