--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<article class="hero hero--image {{ classes }}" style="--image-url: /assets/img/posts/libensky-zamek.jpg)">
+<article class="hero hero--image {{ classes }}" style="--image-url: https://praha8.pirati.cz/assets/img/posts/libensky-zamek.jpg)">
   <div class="container grid lg:grid-rows-5 lg:grid-cols-7 gap-2 items-center">
     <div class="lg:row-span-4 lg:col-span-3 order-1">
       <h1 class="head-alt-md md:head-alt-xl">{{ claim }}{{^ claim }}{{ headline.medium }}{{/ claim }}</h1>
@@ -12,9 +12,6 @@ layout: default
         {{> atoms-basic-button(classes: "btn--white btn--fullwidth md:btn--autowidth text-lg") }}
         {{> atoms-basic-button(classes: "btn--white btn--fullwidth md:btn--autowidth text-lg") }}
       </div>
-    </div>
-    <div class="lg:row-span-5 lg:col-span-4 order-2">
-      <img src="/assets/img/posts/libensky-zamek.jpg" />
     </div>
   </div>
 </article>
