--- a/index.html
+++ b/index.html
@@ -2,51 +2,10 @@
 layout: default
 ---
 
-<article class="hero hero--image " style="--image-url: url(https://praha8.pirati.cz/assets/img/posts/libensky-zamek.jpg)">
-  <div class="container grid lg:grid-rows-5 lg:grid-cols-7 gap-2 items-center">
-    <div class="lg:row-span-4 lg:col-span-3 order-1">
-      <h1 class="head-alt-md md:head-alt-xl">Rizzle adipiscing elizzle. Nullam sapien velizzle, shit volutpizzle, my</h1>
-    </div>
-    <div class="lg:row-span-1 lg:col-span-3 order-3">
-      <div class="mt-4 md:mt-8 space-y-4">
-        <button class="btn btn--white btn--fullwidth md:btn--autowidth text-lg">
-          <div class="btn__body ">Call to action</div>
-        </button>
+{% capture imgPath %}{% asset "posts/libensky-zamek.jpg" @path %}{% endcapture %}
+{% assign imgPath = imgPath | absolute_url %}
 
-        <button class="btn btn--white btn--fullwidth md:btn--autowidth text-lg">
-          <div class="btn__body ">Call to action</div>
-        </button>
-
-      </div>
-    </div>
-    <div class="lg:row-span-5 lg:col-span-4 order-2">
-      <img src="/images/hero-profile-img.png" />
-    </div>
-  </div>
-</article>
-
-<article class="hero hero--image " style="--image-url: url(https://praha8.pirati.cz/assets/img/posts/libensky-zamek.jpg)">
-  <div class="container grid lg:grid-rows-5 lg:grid-cols-7 gap-2 items-center">
-    <div class="lg:row-span-4 lg:col-span-3 order-1">
-      <h1 class="head-alt-md md:head-alt-xl">Rizzle adipiscing elizzle. Nullam sapien velizzle, shit volutpizzle, my</h1>
-    </div>
-    <div class="lg:row-span-1 lg:col-span-3 order-3">
-      <div class="mt-4 md:mt-8 space-y-4">
-        <button class="btn btn--white btn--fullwidth md:btn--autowidth text-lg">
-          <div class="btn__body ">Call to action</div>
-        </button>
-
-        <button class="btn btn--white btn--fullwidth md:btn--autowidth text-lg">
-          <div class="btn__body ">Call to action</div>
-        </button>
-
-      </div>
-    </div>
-    <div class="lg:row-span-5 lg:col-span-4 order-2">
-      <img src="/images/hero-profile-img.png" />
-    </div>
-  </div>
-</article>
+{% include hero/simple.html headline="Piráti Praha 8" description="Makáme v opozici. Držíme směr!" bgImg=imgPath %}
 
 <div class="container container--default pt-4 lg:pb-24">
   <br />
