--- a/zkouska.html
+++ b/zkouska.html
@@ -10,14 +10,17 @@ layout: default
     <div class="lg:row-span-1 lg:col-span-3 order-3">
       <div class="mt-4 md:mt-8 space-y-4">
         <button class="btn btn--white btn--fullwidth md:btn--autowidth text-lg">
-          <div class="btn__body "></div>
+          <div class="btn__body ">Tady je jeden CTA</div>
         </button>
 
         <button class="btn btn--white btn--fullwidth md:btn--autowidth text-lg">
-          <div class="btn__body ">Call to action</div>
+          <div class="btn__body ">Druhý CTA</div>
         </button>
 
       </div>
+    </div>
+    <div class="lg:row-span-5 lg:col-span-4 order-2">
+      <img src="/images/hero-profile-img.png" />
     </div>
   </div>
 </article>
