--- a/zkouska.html
+++ b/zkouska.html
@@ -2,25 +2,30 @@
 layout: default
 ---
 
-<article class="hero hero--image " style="--image-url: url(https://praha8.pirati.cz/assets/img/posts/libensky-zamek.jpg)">
-  <div class="container grid lg:grid-rows-5 lg:grid-cols-7 gap-2 items-center">
-    <div class="lg:row-span-4 lg:col-span-3 order-1">
-      <h1 class="head-alt-md md:head-alt-xl">Rizzle adipiscing elizzle. Nullam sapien velizzle, shit volutpizzle, my</h1>
+
+<article class="hero hero--image py-16 " style="--image-url: url(https://praha8.pirati.cz/assets/img/posts/libensky-zamek.jpg)">
+  <div class="container container--default grid lg:grid-rows-3 lg:grid-cols-7 gap-2 items-center">
+    <div class="lg:row-span-2 lg:col-span-3 order-1">
+      <div class="flag bg-violet-400 text-white head-alt-base mb-6">
+        VOLBY SE BLÍŽÍ!
+      </div>
+
+      <h1 class="head-alt-md md:head-alt-xl">Jsme Piráti z Prahy 8</h1>
     </div>
     <div class="lg:row-span-1 lg:col-span-3 order-3">
       <div class="mt-4 md:mt-8 space-y-4">
-        <button class="btn btn--white btn--fullwidth md:btn--autowidth text-lg">
-          <div class="btn__body ">Tady je jeden CTA</div>
+        <button class="btn btn--white btn--hoveractive btn--fullwidth md:btn--autowidth text-lg">
+          <div class="btn__body ">Call to action 1</div>
         </button>
 
-        <button class="btn btn--white btn--fullwidth md:btn--autowidth text-lg">
-          <div class="btn__body ">Druhý CTA</div>
+        <button class="btn btn--white btn--hoveractive btn--fullwidth md:btn--autowidth text-lg">
+          <div class="btn__body ">Call to action 2</div>
         </button>
 
       </div>
     </div>
-    <div class="lg:row-span-5 lg:col-span-4 order-2">
-      <img src="/images/hero-profile-img.png" />
+    <div class="lg:row-span-3 lg:col-span-4 order-2">
+      <img src="/images/hero-profile-img.png" class="h-32 lg:h-80 lg:m-auto hidden md:block object-contain" />
     </div>
   </div>
 </article>
