--- a/zkouska.html
+++ b/zkouska.html
@@ -18,7 +18,7 @@ layout: default
         </button>
 
         <button class="btn btn--white btn--hoveractive btn--fullwidth md:btn--autowidth text-lg">
-          <div class="btn__body "><a href="/lide/mestske-casti">Jsme po celé Praze</div>
+          <div class="btn__body "><a href="/lide/mestske-casti">Jsme po celé Praze</a></div>
         </button>
 
       </div>
