--- a/zkouska.html
+++ b/zkouska.html
@@ -2,37 +2,28 @@
 layout: default
 ---
 
-<article class="hero hero--image py-16 " style="--image-url: url(https://praha8.pirati.cz/assets/img/posts/libensky-zamek.jpg)">
-  <div class="container container--default grid lg:grid-rows-3 lg:grid-cols-7 gap-2 items-center">
-    <div class="lg:row-span-2 lg:col-span-3 order-1">
-      # <div class="flag bg-violet-400 text-white head-alt-base mb-6">
-        # VOLBY SE BLÍŽÍ!
-      # </div>
-
+article class="hero hero--image " style="--image-url: url(https://praha8.pirati.cz/assets/img/posts/libensky-zamek.jpg)">
+  <div class="container grid lg:grid-rows-5 lg:grid-cols-7 gap-2 items-center">
+    <div class="lg:row-span-4 lg:col-span-3 order-1">
       <h1 class="head-alt-md md:head-alt-xl">Jsme Piráti z Prahy 8</h1>
     </div>
     <div class="lg:row-span-1 lg:col-span-3 order-3">
       <div class="mt-4 md:mt-8 space-y-4">
-        <button class="btn btn--white btn--hoveractive btn--fullwidth md:btn--autowidth text-lg">
-          <div class="btn__body "><a href="/volby/plneni-programu/2018-komunalni.html">Plníme to, co jsme slíbili</a></div>
+        <button class="btn btn--white btn--fullwidth md:btn--autowidth text-lg">
+          <div class="btn__body "><a href="/volby/plneni-programu/2018-komunalni.html">PLNÍME, CO JSME SLÍBILI</a></div>
         </button>
 
-        <button class="btn btn--white btn--hoveractive btn--fullwidth md:btn--autowidth text-lg">
-          <div class="btn__body "><a href="/lide/mestske-casti">Jsme po celé Praze</a></div>
+        <button class="btn btn--white btn--fullwidth md:btn--autowidth text-lg">
+          <div class="btn__body "><a href="/lide/mestske-casti">NAJDETE NÁS V CELÉ PRAZE</a></div>
         </button>
 
       </div>
     </div>
-    <div class="lg:row-span-3 lg:col-span-4 order-2">
-      <img src="https://pardubicky.pirati.cz/assets/23fddd-93f89c41a9a50a42ba79e1eb33b1d9e33ee05bf4e76e40c28068f6b755faa332.png" class="h-32 lg:h-80 lg:m-auto hidden md:block object-contain" />
+    <div class="lg:row-span-5 lg:col-span-4 order-2">
+      <img src="/images/hero-profile-img.png" />
     </div>
   </div>
 </article>
-
-
-
-
-
 
 <div class="container container--default pt-4 lg:pb-24">
   <br />
