--- a/zkouska.html
+++ b/zkouska.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-article class="hero hero--image " style="--image-url: url(https://praha8.pirati.cz/assets/img/posts/libensky-zamek.jpg)">
+article class="hero hero--image " style="--image-url: url("https://praha8.pirati.cz/assets/img/posts/libensky-zamek.jpg")">
   <div class="container grid lg:grid-rows-5 lg:grid-cols-7 gap-2 items-center">
     <div class="lg:row-span-4 lg:col-span-3 order-1">
       <h1 class="head-alt-md md:head-alt-xl">Jsme Piráti z Prahy 8</h1>
@@ -20,7 +20,7 @@ article class="hero hero--image " style="--image-url: url(https://praha8.pirati.
       </div>
     </div>
     <div class="lg:row-span-5 lg:col-span-4 order-2">
-      <img src="/images/hero-profile-img.png" />
+      <img src="https://pardubicky.pirati.cz/assets/23fddd-93f89c41a9a50a42ba79e1eb33b1d9e33ee05bf4e76e40c28068f6b755faa332.png" />
     </div>
   </div>
 </article>
