--- a/zkouska.html
+++ b/zkouska.html
@@ -2,19 +2,19 @@
 layout: default
 ---
 
-<article class="hero hero--image " style="--image-url: url((https://praha8.pirati.cz/assets/img/posts/libensky-zamek.jpg)">
+<article class="hero hero--image " style="--image-url: url(https://praha8.pirati.cz/assets/img/posts/libensky-zamek.jpg)">
   <div class="container grid lg:grid-rows-5 lg:grid-cols-7 gap-2 items-center">
     <div class="lg:row-span-4 lg:col-span-3 order-1">
-      <h1 class="head-alt-md md:head-alt-xl">Jsme Piráty z Prahy 8! Držíme směr.</h1>
+      <h1 class="head-alt-md md:head-alt-xl">Rizzle adipiscing elizzle. Nullam sapien velizzle, shit volutpizzle, my</h1>
     </div>
     <div class="lg:row-span-1 lg:col-span-3 order-3">
       <div class="mt-4 md:mt-8 space-y-4">
         <button class="btn btn--white btn--fullwidth md:btn--autowidth text-lg">
-          <div class="btn__body "><a href="/volby/plneni-programu/2018-komunalni.html">PLNÍME, CO JSME SLÍBILI</a></div>
+          <div class="btn__body ">Call to action</div>
         </button>
 
         <button class="btn btn--white btn--fullwidth md:btn--autowidth text-lg">
-          <div class="btn__body ">a href="/lide/mestske-casti">NAJDETE NÁS V CELÉ PRAZE</a></div>
+          <div class="btn__body ">Call to action</div>
         </button>
 
       </div>
@@ -24,7 +24,6 @@ layout: default
     </div>
   </div>
 </article>
-
 
 <div class="container container--default pt-4 lg:pb-24">
   <br />
