--- a/zkouska.html
+++ b/zkouska.html
@@ -5,7 +5,7 @@ layout: default
 <article class="hero hero--image " style="--image-url: url(https://praha8.pirati.cz/assets/img/posts/libensky-zamek.jpg)">
   <div class="container grid lg:grid-rows-4 lg:grid-cols-7 gap-2 items-center">
     <div class="lg:row-span-4 lg:col-span-3 order-1">
-      <h1 class="head-alt-md md:head-alt-xl">Rizzle adipiscing elizzle. Nullam sapien velizzle, shit volutpizzle, my</h1>
+      <h1 class="head-alt-md md:head-alt-xl">Rizzle adipiscing elizzle. Nullam sapien velizzle, shit</h1>
     </div>
     <div class="lg:row-span-1 lg:col-span-3 order-3">
       <div class="mt-4 md:mt-8 space-y-4">
