--- a/zkouska.html
+++ b/zkouska.html
@@ -2,25 +2,25 @@
 layout: default
 ---
 
-<article class="hero hero--image " style="--image-url: url(https://praha8.pirati.cz/assets/img/posts/libensky-zamek.jpg)">
+<article class="hero hero--image " style="--image-url: url(https://www.codingbootcamp.cz/img/why1.jpg)">
   <div class="container grid lg:grid-rows-4 lg:grid-cols-7 gap-2 items-center">
     <div class="lg:row-span-4 lg:col-span-3 order-1">
-      <h1 class="head-alt-md md:head-alt-xl">Rizzle adipiscing elizzle. Nullam sapien velizzle, shit</h1>
+      <h1 class="head-alt-md md:head-alt-xl">Jsme Piráti! Držíme směr při vedení našeho hlavního města.</h1>
     </div>
     <div class="lg:row-span-1 lg:col-span-3 order-3">
       <div class="mt-4 md:mt-8 space-y-4">
         <button class="btn btn--white btn--fullwidth md:btn--autowidth text-lg">
-          <div class="btn__body ">Call to action</div>
+          <div class="btn__body ">Plníme náš program pro Prahu</div>
         </button>
 
         <button class="btn btn--white btn--fullwidth md:btn--autowidth text-lg">
-          <div class="btn__body ">Call to action</div>
+          <div class="btn__body ">Najdete nás v městských částech</div>
         </button>
 
       </div>
     </div>
     <div class="lg:row-span-5 lg:col-span-4 order-2">
-      <img src="https://pardubicky.pirati.cz/assets/23fddd-93f89c41a9a50a42ba79e1eb33b1d9e33ee05bf4e76e40c28068f6b755faa332.png" />
+      <img src="hero-home-praha.png" />
     </div>
   </div>
 </article>
