--- a/zkouska.html
+++ b/zkouska.html
@@ -10,11 +10,11 @@ layout: default
     <div class="lg:row-span-1 lg:col-span-3 order-3">
       <div class="mt-4 md:mt-8 space-y-4">
         <button class="btn btn--white btn--fullwidth md:btn--autowidth text-lg">
-          <div class="btn__body ">Plníme náš program pro Prahu</div>
+          <div class="btn__body "><a href="/volby/plneni-programu/2018-komunalni.html">Plníme náš program pro Prahu</a></div>
         </button>
 
         <button class="btn btn--white btn--fullwidth md:btn--autowidth text-lg">
-          <div class="btn__body ">Najdete nás v městských částech</div>
+          <div class="btn__body "><a href="/lide/mestske-casti/">Najdete nás v městských částech</a></div>
         </button>
 
       </div>
