--- a/zkouska.html
+++ b/zkouska.html
@@ -5,7 +5,7 @@ layout: default
 <article class="hero hero--image " style="--image-url: url(http://praha8.pirati.cz/assets/img/hero-home-pozadi.jpg)">
   <div class="container grid lg:grid-rows-4 lg:grid-cols-7 gap-2 items-center">
     <div class="lg:row-span-4 lg:col-span-3 order-1">
-      <h1 class="head-alt-md md:head-alt-xl">Jsme Piráti z osmičky! <br /> Máme odvahu řídit Prahu 8 správně!</h1>
+      <h1 class="head-alt-md md:head-alt-xl">Máme odvahu řídit Prahu 8 správně! <br /> Jsme Piráti z osmičky!</h1>
     </div>
     <div class="lg:row-span-1 lg:col-span-3 order-3">
       <div class="mt-4 md:mt-8 space-y-4">
@@ -20,7 +20,7 @@ layout: default
       </div>
     </div>
     <div class="lg:row-span-5 lg:col-span-4 order-2">
-      <img src="/assets/img/hero-home-praha8.png" />
+      <img src="/assets/img/herome-home-tvare-2022.png" />
     </div>
   </div>
 </article>
