--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@ layout: default
     <div class="lg:row-span-1 lg:col-span-3 order-3">
       <div class="mt-4 md:mt-8 space-y-4">
         <button class="btn btn--white btn--fullwidth md:btn--autowidth text-lg">
-          <div class="btn__body "><a href="volby/2022-komunalni.html?pohled=program">Náš program pro Prahu 8</a></div>
+          <div class="btn__body "><a href="volby/2022-komunalni.html?pohled=program">S čím jdeme na osmičce do voleb?</a></div>
         </button>
 
         <button class="btn btn--white btn--fullwidth md:btn--autowidth text-lg">
-          <div class="btn__body "><a href="/lide/">Seznamte se s námi!</a></div>
+          <div class="btn__body "><a href=""volby/2022-komunalni.html">Tohle je naše kandidátka</a></div>
         </button>
 
       </div>
