--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: default
         </button>
 
         <button class="btn btn--white btn--fullwidth md:btn--autowidth text-lg">
-          <div class="btn__body "><a href=""volby/2022-komunalni.html">Tohle je naše kandidátka</a></div>
+          <div class="btn__body "><a href="volby/2022-komunalni.html">Tohle je naše kandidátka</a></div>
         </button>
 
       </div>
