--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
   <div class="container grid lg:grid-rows-4 lg:grid-cols-7 gap-2 items-center">
     <div class="lg:row-span-4 lg:col-span-3 order-1">
       <div class="flag bg-blue-300 text-white head-alt-base mb-6">
-        Volte 23.–24. 9. 2022 Piráty. Máme číslo 5.
+        Volte 23.–24. 9. 2022 Piráty, Máme číslo 5
       </div>
       <h1 class="head-alt-md md:head-alt-xl">Máme odvahu <br /> řídit Prahu 8 <br /> správně!</h1>
     </div>
