Disable the countdown

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ layout: default
 <div class="container container--default pt-4 lg:pb-24">
   <br />
   {% include homepage/news.html title="Aktuality z osmičky" %}
-  {% include homepage/countdown.html deadline="2022-09-23 14:00:00" %}
+  <!-- {% include homepage/countdown.html deadline="2026-09-23 14:00:00" %} -->
   {% include homepage/calendar.html %}
   {% include homepage/social.html %}
 </div>
