--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@ layout: default
       <div class="flag bg-blue-300 text-white head-alt-base mb-6">
         Děkujeme za hlasy. Moc si jich vážíme.
       </div>
-      <h1 class="head-alt-md md:head-alt-xl">Máme odvahu <br /> řídit Prahu 8 <br /> správně!</h1>
+      <h1 class="head-alt-md md:head-alt-xl">I z opozice <br /> máme odvahu <br /> řídit Prahu 8 <br /> správně!</h1>
     </div>
     <div class="lg:row-span-1 lg:col-span-3 order-3">
       <div class="mt-4 md:mt-8 space-y-4">
         <button class="btn btn--white btn--fullwidth md:btn--autowidth text-lg">
-          <div class="btn__body "><a href="volby/2022-komunalni.html?pohled=program">S čím jdeme na osmičce do voleb?</a></div>
+          <div class="btn__body "><a href="volby/2022-komunalni.html?pohled=program">S čím jsme šli na osmičce do voleb</a></div>
         </button>
 
         <button class="btn btn--white btn--fullwidth md:btn--autowidth text-lg">
-          <div class="btn__body "><a href="volby/2022-komunalni.html">Tohle je naše kandidátka</a></div>
+          <div class="btn__body "><a href="lide">Seznamte se s naším týmem</a></div>
         </button>
 
       </div>
