--- a/lide/index.html
+++ b/lide/index.html
@@ -1,6 +1,6 @@
 ---
 layout: members
-title: Piráti a Pirátky na osmičce
+title: Pirátky a Piráti z osmičky
 
 viewMode: grouped # or alltogether
 groups:
