Add authors to news home

--- a/aktuality/index.html
+++ b/aktuality/index.html
@@ -16,5 +16,17 @@ pagination:
     {% if paginator.total_pages > 1 %}
       {% include articles/pagination.html paginator=paginator %}
     {% endif %}
+    <h2 class="mt-8 head-alt-base">Autoři aktualit:</h2>
+    <div class="inline-block-nogap mt-4">
+      {% for item in site.data.authors %}
+        {% assign tagUrl = item[1].link %}
+        {% capture cta %}{{ item[0] }} ({{item[1].posts.size}}) {% endcapture %}
+        {% capture btnClass %}article-card__category-button btn--condensed text-sm font-light btn--grey-125 btn--hoveractive{% endcapture %}
+        {% include buttons/basic.html class=btnClass cta=cta href=tagUrl %}
+      {% endfor %}
+    </div>
+  </section>
+</div>
+
   </section>
 </div>
