--- a/lide/index.html
+++ b/lide/index.html
@@ -1,20 +1,16 @@
 ---
-layout: members
+layout: default
 title: Pirátky a Piráti z osmičky
-
-viewMode: grouped # or alltogether
-groups:
-  - name: Předsednictvo místního sdružení
-    category: pms
-    sort: ordpms
-  - name: Zastupitelé MČ Praha 8
-    category: zastupitele
-    sort: ordzas
-  - name: Senátoři a poslanci
-    category: ustavni-cinitele
-  - name: Členové MS Praha 8
-    category: clenove
-  - name: Registrovaní příznivci a podporovatelé MS Praha 8
-    category: regp
 ---
-
+<div class="container container--default py-8 lg:py-24">
+  <header>
+      <h1 itemprop="headline" class="head-alt-md md:head-alt-lg max-w-5xl mb-8">{{ page.title }}</h1>
+  </header>
+  <div class="mb-8 lg:mb-16 content-block" itemprop="description">
+    <ul>
+      <li><a href="/lide/mistni-sdruzeni-praha-8/">Místní sdružení Praha 8</a></li>
+      <li><a href="/lide/mestska-cast-praha-8/">Zastupitelstvo MČ Praha 8</a></li>
+      <li><a href="/lide/mistni-expertni-tymy/">Místní expertní týmy</a></li>
+    </ul>
+  </div>
+</div>
