--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<article class="hero hero--image " style="--image-url: url(http://praha8.pirati.cz/assets/img/hero-home-pozadi.jpg)">
+<article class="hero hero--image" style="--image-url: url(http://praha8.pirati.cz/assets/img/hero-home-pozadi.jpg)">
   <div class="container grid lg:grid-rows-4 lg:grid-cols-7 gap-2 items-center">
     <div class="lg:row-span-4 lg:col-span-3 order-1">
       <h1 class="head-alt-md md:head-alt-xl">Jsme Pirátky <br />a Piráti z osmičky.<br />Máme odvahu dělat, co je správné!</h1>
@@ -16,11 +16,10 @@ layout: default
         <button class="btn btn--white btn--fullwidth md:btn--autowidth text-lg">
           <div class="btn__body "><a href="lide">Seznamte se s naším týmem</a></div>
         </button>
-
       </div>
     </div>
     <div class="lg:row-span-5 lg:col-span-4 order-2">
-      <img src="/assets/img/home-hero-tvare2022-3.png" />
+      <img src="/assets/img/home-hero-tvare2022-3.png" alt="Pirati Image" />
     </div>
   </div>
 </article>
