--- a/404.html
+++ b/404.html
@@ -1,11 +1,16 @@
 ---
 layout: default
+title: Stránka nenalezena - Můj web
+description: Omlouváme se, ale požadovaná stránka nebyla na našem serveru nalezena.
+keywords: stránka nenalezena, chyba 404, nenalezeno
 ---
 
 <div class="container container--default pt-8 lg:py-24">
   <section>
-    <h1 class="head-alt-md md:head-alt-lg max-w-5xl mb-4">404 Stránka nebyla nalezena :(</h1>
+    <h1 class="titulo-stranky text-2xl lg:text-4xl font-bold mb-8">404 Stránka nenalezena :(</h1>
 
-    <p>Litujeme, ale požadovaná stránka nebyla na našem serveru nalezena.</p>
+    <p class="text-lg lg:text-xl leading-normal text-gray-700">Omlouváme se, ale požadovaná stránka nebyla na našem serveru nalezena. Zkontrolujte zadanou adresu a zkuste to znovu.</p>
+
+    <p class="mt-4"><a href="/" class="text-blue-500 hover:underline">Zpět na domovskou stránku</a></p>
   </section>
 </div>
