--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@ layout: default
 <article class="hero hero--image " style="--image-url: url(http://praha8.pirati.cz/assets/img/hero-home-pozadi.jpg)">
   <div class="container grid lg:grid-rows-4 lg:grid-cols-7 gap-2 items-center">
     <div class="lg:row-span-4 lg:col-span-3 order-1">
-      <h1 class="head-alt-md md:head-alt-xl">Jsme Pirátky <br />a Piráti z osmičky.<br />Máme odvahu dělat, co je správné!</h1>
+      <h1 class="head-alt-md md:head-alt-xl">Jsme Piráti <br />a Pirátky z osmičky.<br />Máme odvahu dělat, co je správné!</h1>
     </div>
     <div class="lg:row-span-1 lg:col-span-3 order-3">
       <div class="mt-4 md:mt-8 space-y-4">
         <button class="btn btn--white btn--fullwidth md:btn--autowidth text-lg">
-          <div class="btn__body "><a href="volby/2022-komunalni.html?pohled=program">S čím jsme šli na osmičce do voleb</a></div>
+          <div class="btn__body "><a href="volby/2022-komunalni.html?pohled=program">Tohle je náš osmičkový volební program z roku 2022</a></div>
         </button>
 
         <button class="btn btn--white btn--fullwidth md:btn--autowidth text-lg">
-          <div class="btn__body "><a href="lide">Seznamte se s naším týmem</a></div>
+          <div class="btn__body "><a href="lide">Seznamte se s naším týmem, táhneme za jeden provaz</a></div>
         </button>
 
       </div>
