--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
     <div class="lg:row-span-1 lg:col-span-3 order-3">
       <div class="mt-4 md:mt-8 space-y-4">
         <button class="btn btn--white btn--fullwidth md:btn--autowidth text-lg">
-          <div class="btn__body "><a href="volby/2022-komunalni.html?pohled=program">Tohle je náš osmičkový volební program z roku 2022</a></div>
+          <div class="btn__body "><a href="https://lukaswagenknecht.cz/volby-2024/">Lukáš Wagenknecht – Váš senátor, váš hlas</a></div>
         </button>
 
         <button class="btn btn--white btn--fullwidth md:btn--autowidth text-lg">
@@ -20,7 +20,7 @@ layout: default
       </div>
     </div>
     <div class="lg:row-span-5 lg:col-span-4 order-2">
-      <img src="/assets/img/home-hero-tvare2022-3.png" />
+      <img src="/assets/img/home-hero-lw2024.png" />
     </div>
   </div>
 </article>
