--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@ layout: default
 <article class="hero hero--image " style="--image-url: url(http://praha8.pirati.cz/assets/img/hero-home-pozadi.jpg)">
   <div class="container grid lg:grid-rows-4 lg:grid-cols-7 gap-2 items-center">
     <div class="lg:row-span-4 lg:col-span-3 order-1">
-      <h1 class="head-alt-md md:head-alt-xl">Zvolme v září<br />Lukáše Wagenknechta znova do Senátu. Je to váš senátor a váš hlas.</h1>
+      <h1 class="head-alt-md md:head-alt-xl">Váš senátor, váš hlas. Zvolme 20. a 21. září Lukáše Wagenknechta znova do Senátu.</h1>
     </div>
     <div class="lg:row-span-1 lg:col-span-3 order-3">
       <div class="mt-4 md:mt-8 space-y-4">
         <button class="btn btn--white btn--fullwidth md:btn--autowidth text-lg">
-          <div class="btn__body "><a href="https://lukaswagenknecht.cz/volby-2024/">Lukáš Wagenknecht – Váš senátor, váš hlas</a></div>
+          <div class="btn__body "><a href="https://lukaswagenknecht.cz/volby-2024/">Přečtěte si víc o tom, co Lukáš v Senátu dělá</a></div>
         </button>
 
         <button class="btn btn--white btn--fullwidth md:btn--autowidth text-lg">
