--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@ layout: default
 <article class="hero hero--image " style="--image-url: url(http://praha8.pirati.cz/assets/img/hero-home-pozadi.jpg)">
   <div class="container grid lg:grid-rows-4 lg:grid-cols-7 gap-2 items-center">
     <div class="lg:row-span-4 lg:col-span-3 order-1">
-      <h3 class="head-alt-md md:head-alt-xl">Váš senátor, váš hlas.</h3>
-      <h1 class="head-alt-md md:head-alt-xl">Zvolme 20. a 21. září Lukáše Wagenknechta znova do Senátu</h1>
+      <div class="flag bg-violet-400 text-white head-alt-base mb-6">
+        Váš senátor, váš hlas
+      </div>
+
+      <h1 class="head-alt-md md:head-alt-xl">Zvolme v září Lukáše Wagenknechta znova do Senátu</h1>
     </div>
     <div class="lg:row-span-1 lg:col-span-3 order-3">
       <div class="mt-4 md:mt-8 space-y-4">
