--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <article class="hero hero--image " style="--image-url: url(http://praha8.pirati.cz/assets/img/hero-home-pozadi.jpg)">
   <div class="container grid lg:grid-rows-4 lg:grid-cols-7 gap-2 items-center">
     <div class="lg:row-span-4 lg:col-span-3 order-1">
-      <div class="flag bg-yellow text-black head-alt-base mb-6">
+      <div class="flag bg-yellow-400 text-black head-alt-base mb-6">
         1. kolo senátních voleb je 20.-21.9. 2024
       </div>
 
