--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <article class="hero hero--image " style="--image-url: url(http://praha8.pirati.cz/assets/img/hero-home-pozadi.jpg)">
   <div class="container grid lg:grid-rows-4 lg:grid-cols-7 gap-2 items-center">
     <div class="lg:row-span-4 lg:col-span-3 order-1">
-      <div class="flag bg-yellow-400 text-black head-alt-base mb-6">
+      <div class="flag bg-pirati text-black head-alt-base mb-6">
         1. kolo senátních voleb je 20.-21.9. 2024
       </div>
 
@@ -14,7 +14,7 @@ layout: default
     <div class="lg:row-span-1 lg:col-span-3 order-3">
       <div class="mt-4 md:mt-8 space-y-4">
         <button class="btn btn--white btn--fullwidth md:btn--autowidth text-lg">
-          <div class="btn__body "><a href="https://lukaswagenknecht.cz/volby-2024/">Přečtěte si víc o tom, co Lukáš v Senátu dělá</a></div>
+          <div class="btn__body "><a href="https://lukaswagenknecht.cz/volby-2024/">Přečtěte si o tom, co Lukáš v Senátu dělá</a></div>
         </button>
 
         <button class="btn btn--white btn--fullwidth md:btn--autowidth text-lg">
