--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@ layout: default
 <article class="hero hero--image " style="--image-url: url(http://praha8.pirati.cz/assets/img/hero-home-pozadi.jpg)">
   <div class="container grid lg:grid-rows-4 lg:grid-cols-7 gap-2 items-center">
     <div class="lg:row-span-4 lg:col-span-3 order-1">
-      <div class="flag bg-pirati text-black head-alt-base mb-6">
-        1. kolo senátních voleb je 20.-21.9. 2024
+      <div class="flag bg-cyan-500 text-white head-alt-base mb-6">
+        20. a 21. září 2024
       </div>
 
       <h1 class="head-alt-md md:head-alt-xl">Zvolme Lukáše Wagenknechta znova do Senátu</h1>
