--- a/404.html
+++ b/404.html
@@ -4,8 +4,8 @@ layout: default
 
 <div class="container container--default pt-8 lg:py-24">
   <section>
-    <h1 class="head-alt-md md:head-alt-lg max-w-5xl mb-4">404 Stránka nebyla nalezena :(</h1>
+    <h1 class="head-alt-md md:head-alt-lg max-w-5xl mb-4">404 | Stránka nebyla nalezena :(</h1>
 
-    <p>Litujeme, ale požadovaná stránka nebyla na našem serveru nalezena.</p>
+    <p>Litujeme, ale stránku buď někdo utopil, uloupil nebo nikdy neexistovala.</p>
   </section>
 </div>
