--- a/index.html
+++ b/index.html
@@ -5,26 +5,19 @@ layout: default
 <article class="hero hero--image " style="--image-url: url(http://praha8.pirati.cz/assets/img/hero-home-pozadi.jpg)">
   <div class="container grid lg:grid-rows-4 lg:grid-cols-7 gap-2 items-center">
     <div class="lg:row-span-4 lg:col-span-3 order-1">
-      <div class="flag bg-cyan-500 text-white head-alt-base mb-6">
-        20. a 21. září 2024
-      </div>
-
-      <h1 class="head-alt-md md:head-alt-xl">Zvolme Lukáše Wagenknechta znova do Senátu</h1>
+      <h1 class="head-alt-md md:head-alt-xl">Jsme Pirátky<br />a Piráti z osmičky.<br />Máme odvahu dělat, co je správné!</h1>
     </div>
     <div class="lg:row-span-1 lg:col-span-3 order-3">
       <div class="mt-4 md:mt-8 space-y-4">
-        <button class="btn btn--white btn--fullwidth md:btn--autowidth text-lg">
-          <div class="btn__body "><a href="https://lukaswagenknecht.cz/volby-2024/">Přečtěte si o tom, co Lukáš v Senátu dělá</a></div>
-        </button>
 
         <button class="btn btn--white btn--fullwidth md:btn--autowidth text-lg">
-          <div class="btn__body "><a href="lide">Tohle jsou Piráti a Pirátky z Prahy 8</a></div>
+          <div class="btn__body "><a href="lide">Seznamte se s naším týmem, táhneme za jeden provaz</a></div>
         </button>
 
       </div>
     </div>
     <div class="lg:row-span-5 lg:col-span-4 order-2">
-      <img src="/assets/img/home-hero-lw2024-3.png" />
+      <img src="/assets/img/home-hero-lw2024-2.png" />
     </div>
   </div>
 </article>
