--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<article class="hero hero--image " style="--image-url: url(http://praha8.pirati.cz/assets/video/video-intro.mp4)">
+<article class="hero hero--image " style="--image-url: url(http://praha8.pirati.cz/assets/img/hero-home-pozadi.jpg)">
   <div class="container grid lg:grid-rows-4 lg:grid-cols-7 gap-2 items-center">
     <div class="lg:row-span-4 lg:col-span-3 order-1">
       <h1 class="head-alt-md md:head-alt-xl">Jsme Pirátky<br />a Piráti z osmičky.<br />Máme odvahu dělat, co je správné!</h1>
@@ -11,7 +11,10 @@ layout: default
       <div class="mt-4 md:mt-8 space-y-4">
 
         <button class="btn btn--white btn--fullwidth md:btn--autowidth text-lg">
-          <div class="btn__body "><a href="lide">Seznamte se s naším týmem, táhneme za jeden provaz</a></div>
+          <div class="btn__body "><a href="/lide/mestska-cast-praha-8/">Tohle je náš tým pro Prahu 8</a></div>
+        </button>
+        <button class="btn btn--white btn--fullwidth md:btn--autowidth text-lg">
+          <div class="btn__body "><a href="kontakt">Přidejte se k nám</a></div>
         </button>
 
       </div>
