--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@ layout: default
 <article class="hero hero--image " style="--image-url: url(http://praha8.pirati.cz/assets/img/hero-home-pozadi_new.jpg)">
   <div class="container grid lg:grid-rows-4 lg:grid-cols-7 gap-2 items-center">
     <div class="lg:row-span-4 lg:col-span-3 order-1">
+        <div class="flag bg-blue-300 text-white head-alt-base mb-6">
+        Zpátky v plné síle
+        </div>      
       <h1 class="head-alt-md md:head-alt-xl">Jsme Pirátky<br />a Piráti z osmičky.<br />Máme odvahu dělat, co je správné!</h1>
     </div>
     <div class="lg:row-span-1 lg:col-span-3 order-3">
