--- a/lide/zastupitelstvo-praha8/index.html
+++ b/lide/zastupitelstvo-praha8/index.html
@@ -1,6 +1,6 @@
 ---
 layout: people
-title: Piráti v městské části Praha 8
+title: Náš tým v Zastupitelstvu MČ Praha 8
 teams:
   - zastupitele
   - komise
