--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
   <div class="container grid lg:grid-rows-4 lg:grid-cols-7 gap-2 items-center">
     <div class="lg:row-span-4 lg:col-span-3 order-1">
         <div class="flag bg-blue-300 text-white head-alt-base mb-6">
-        Zpátky v plné síle
+        NAKOPNEME TO!
         </div>      
       <h1 class="head-alt-md md:head-alt-xl">Jsme Pirátky<br />a Piráti z osmičky.<br />Máme odvahu dělat, co je správné!</h1>
     </div>
